fixed blog dark mode toggle icon alignment issue

--- a/src/stylesheets/components/DarkModeToggle.module.sass
+++ b/src/stylesheets/components/DarkModeToggle.module.sass
@@ -2,8 +2,8 @@ $transitionDuration: .5s
 $boxShadowTransition: box-shadow $transitionDuration linear
 
 .darkModeToggle
-  width: 2rem
-  height: 2rem
+  width: 1.8rem
+  height: 1.8rem
   background: transparent
   border-radius: 50%
   -webkit-transition: $boxShadowTransition
@@ -11,7 +11,7 @@ $boxShadowTransition: box-shadow $transitionDuration linear
   transition: $boxShadowTransition
 
 .sun
-  box-shadow: inset 19px -12px 0 -5px #000
+  box-shadow: inset 19px -10px 0 -5px #000
 
 .moon
   box-shadow: inset -7px -3px 0 20px #fff
